# kavya-aidoku

./: .gitignore  Cargo.toml  README.md  build.ps1  index.json  index.min.json
.github/workflows/: build.yaml
res/: settings.json  source.json
sources/: multi.kavya-v1.aix
src/: lib.rs
