[package]
name = "kavya"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
lto = true

[dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs", features = ["helpers"] }
serde = { version = "1.0.183", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.105", default-features = false, features = ["alloc"] }